--- a/Projeto Farmacia Avançado/assets/css/styles.css
+++ b/Projeto Farmacia Avançado/assets/css/styles.css
@@ -1,184 +1,166 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
+
 body {
     position: relative;
-    width: 1555px;
-    height: 963px;
     margin: 0;
     padding: 0;
     background-color: #F5F5F5;
-   
 }
 
-    #firstHeader {
-        position: absolute;
-        width: 1955px;
-        height: 107px;
-        margin-left: 0px;
-        left: 0px;
-        top: 0px;
-        background: #76BEBE;
+#firstHeader {
+    position: absolute;
+    width: 100%;
+    height: 107px;
+    left: 0;
+    top: 0;
+    background: #76BEBE;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
+#firstHeader ul {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #F5F5F5;
+    list-style: none;
+    margin: 5px 0;
+    justify-content: space-around;
+}
 
-    }
+#secondHeader {
+    position: absolute;
+    width: 100%;
+    height: 174px;
+    left: 0;
+    top: 107px;
+    background: #FFFFFF;
+}
 
-    #firstHeader ul {
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 38px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        color: #F5F5F5;
-        list-style: none;
-        margin-top: 5px;
-        justify-content: space-around;
-    }
+#secondHeader img {
+    position: absolute;
+    width: 261px;
+    height: 160px;
+    left: 50px;
+}
 
-    #secondHeader {
-        position: absolute;
-        width: 1579px;
-        height: 174px;
-        left: -12px;
-        top: 107px;
-        background: #FFFFFF;
-    }
+#secondHeader h1 {
+    position: absolute;
+    width: 100%;
+    height: 87px;
+    top: -15px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 75px;
+    text-align: center;
+    color: #CF509C;
+}
 
-    #secondHeader img{
-        position: absolute;
-        width: 261px;
-        height: 160px;
-        left: 130px;
-    
-    }
+#secondHeader h4 {
+    position: absolute;
+    width: 100%;
+    height: 91px;
+    left: 0;
+    top: 60px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+}
 
-    #secondHeader h1 {
-        position: absolute;
-        width: 825px;
-        height: 87px;
-        left: 397px;
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 64px;
-        line-height: 75px;
-        text-align: center;
-        color: #CF509C;
-    }
+main {
+    padding-top: 340px;
+    padding-bottom: 100px;
+}
 
-    #secondHeader h4 {
-        position: absolute;
-        width: 771px;
-        height: 91px;
-        left: 444px;
-        top: 80px;
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 36px;
-        line-height: 42px;
-        text-align: center;
-    }
+#form {
+    width: 363px;
+    margin-left: 30px;
+    font-family: 'Alegreya Sans SC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+    color: #000000;
+    padding: 10px;
+}
 
+#form input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 54px;
+    background: rgba(255, 255, 255, 0.57);
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 20px;
+    border: none;
+    font-family: 'Alegreya Sans SC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+}
 
-    #form {
-        position: relative;
-        width: 363px;
-        top: 314px;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        font-family: 'Alegreya Sans SC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-        color: #000000;
-        padding: 10px;
-        margin-left: 30px;
-        margin-right: auto;
-    }
+#botao {
+    width: 306px;
+    height: 62px;
+    border: none;
+    margin-left: 10px;
+    background: #76BEBE;
+    border-radius: 10px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 39px;
+    line-height: 46px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
 
-    #form input {
-        box-sizing: border-box;
-        width: 373px;
-        height: 54px;
-        display: flex;
-        flex-direction: column;
-        background: rgba(255, 255, 255, 0.57);
-        border-radius: 10px;
-        padding: 5px;
-        margin-bottom: 20px;
-        border: none;
-        font-family: 'Alegreya Sans SC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-    }
+#tableMed {
+    border-collapse: collapse;
+    margin-left: 450px;
+    margin-top: -570px;
+    width: 200px;
+}
 
-    #botao {
-        position: absolute;
-        width: 306px;
-        height: 62px;
-        left: 30px;
-        top: 835px;
-        border: none;
-        background: #76BEBE;
-        border-radius: 10px;
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 39px;
-        line-height: 46px;
-        text-align: center;
-        color: #FFFFFF;
+#tableMed th,
+#tableMed td {
+    padding: 10px;
+    text-align: end;
+    border: 2px solid black;
+    font-family: 'Alegreya Sans SC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+}
 
-    }
+#tableMed th {
+    background: #767373;
+    color: white;
+}
 
-
-    #tableMed {
-        margin-top: -150px; 
-        border-collapse: collapse;
-        width: 50%;
-        margin-left: 700px;
-      }
-      
-      #tableMed th,
-      #tableMed td {
-        padding: 10px; 
-        text-align: center;
-        border: 2px solid black; 
-        font-family: 'Alegreya Sans SC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-        
-      }
-      
-      #tableMed th {
-        background: #767373;
-        color: white;
-      }
-      
-
-    tr {
-        text-align: center;
-        font-family: 'Alegreya Sans SC';
-        background: #beb9b9;
-        color: black;
-        border: 4px solid black;
-        min-width: 80px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-        top: 140px;
-    
-    }
-
-
-
+tr {
+    text-align: end;
+    font-family: 'Alegreya Sans SC';
+    background: #beb9b9;
+    color: black;
+    border: 4px solid black;
+    min-width: 80px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+}
