adicionando media query na primeira versao do projeto

--- a/Projeto Farmacia Dinamica 1 Day 4/assets/css/styles.css
+++ b/Projeto Farmacia Dinamica 1 Day 4/assets/css/styles.css
@@ -1,132 +1,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
+
 body {
-    position: relative;
-    width: 1555px;
-    height: 963px;
     margin: 0;
     padding: 0;
-   
 }
 
-    #firstHeader {
-        position: absolute;
-        width: 1555px;
-        height: 107px;
-        left: 0px;
-        top: 0px;
-        background: #76BEBE;
+#firstHeader {
+    background: #76BEBE;
+    padding: 20px;
+}
+
+#firstHeader ul {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #F5F5F5;
+    list-style: none;
+    margin: 0;
+    padding: 5px;
+}
+
+#secondHeader {
+    background: #FFFFFF;
+}
+
+#secondHeader img {
+    width: 261px;
+    height: 160px;
+}
+
+#secondHeader h1 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 75px;
+    text-align: center;
+    color: #CF509C;
+    margin-top: -90px;
+}
+
+#secondHeader h4 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+}
+
+main {
+    background-color: #F5F5F5;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: 'Alegreya Sans SC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+    color: #000000;
+}
+
+#form label {
+    display: block; 
+    margin-bottom: 10px;
+}
+
+#form input {
+    box-sizing: border-box;
+    width: 373px;
+    height: 54px;
+    background: rgba(255, 255, 255, 0.57);
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 20px;
+    border: none;
+    font-family: 'Alegreya Sans SC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+}
 
 
-    }
 
+#botao {
+    width: 306px;
+    height: 62px;
+    border: none;
+    background: #76BEBE;
+    border-radius: 10px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 39px;
+    line-height: 46px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-left: 500px;
+    margin-bottom: 100px;
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    
     #firstHeader ul {
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 38px;
         display: flex;
+        flex-direction: column;
         align-items: center;
         text-align: center;
-        color: #F5F5F5;
-        list-style: none;
-        margin-top: 5px;
-        justify-content: space-around;
+        padding: 20px;
+        line-height: 50px;
+
     }
 
-    #secondHeader {
-        position: absolute;
-        width: 1579px;
-        height: 174px;
-        left: -12px;
-        top: 107px;
-        background: #FFFFFF;
+    #secondHeader img {
+        width: 130px;
+        height: 80px;
+        margin: 0;
     }
 
-    #secondHeader img{
-        position: absolute;
-        width: 261px;
-        height: 160px;
-        left: 130px;
     
-    }
-
     #secondHeader h1 {
-        position: absolute;
-        width: 825px;
-        height: 87px;
-        left: 397px;
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 64px;
-        line-height: 75px;
-        text-align: center;
-        color: #CF509C;
+        width: 200px;
+        font-size: 20px;
+        line-height: 48px;
+        margin-left: 100px;
     }
 
     #secondHeader h4 {
-        position: absolute;
-        width: 771px;
-        height: 91px;
-        left: 444px;
-        top: 80px;
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 36px;
-        line-height: 42px;
-        text-align: center;
-    }
-
-    main {
-        background-color: #F5F5F5;
+        font-size: 24px;
+        line-height: 28px;
     }
 
     #form {
-        position: relative;
-        width: 363px;
-        top: 314px;
-        left: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-family: 'Alegreya Sans SC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
-        color: #000000;
         padding: 10px;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     #form input {
-        box-sizing: border-box;
-        width: 373px;
-        height: 54px;
-        display: flex;
-        flex-direction: column;
-        background: rgba(255, 255, 255, 0.57);
-        border-radius: 10px;
-        padding: 5px;
-        margin-bottom: 20px;
-        border: none;
-        font-family: 'Alegreya Sans SC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 28px;
-        line-height: 34px;
+        width: 100%;
     }
 
     #botao {
-        position: absolute;
+        margin-left: 10px;
+    }
+
+    #voltar {
         width: 306px;
         height: 62px;
-        left: 620px;
-        top: 835px;
         border: none;
         background: #76BEBE;
         border-radius: 10px;
@@ -137,8 +170,13 @@ body {
         line-height: 46px;
         text-align: center;
         color: #FFFFFF;
+        margin-left: 5px;
+    }
 
+    #med {
+        width: 300px;
+        margin-top: 500px;
     }
 
 
-
+}
