--- a/Projeto Farmacia Avançado/assets/css/styles.css
+++ b/Projeto Farmacia Avançado/assets/css/styles.css
@@ -19,20 +19,20 @@ body {
     padding-bottom: 10px;
 }
 
-#firstHeader ul {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #F5F5F5;
-    list-style: none;
-    margin: 5px 0;
-    justify-content: space-around;
-}
+    #firstHeader ul {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 38px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #F5F5F5;
+        list-style: none;
+        margin: 5px 0;
+        justify-content: space-around;
+    }
 
 #secondHeader {
     position: absolute;
@@ -43,40 +43,40 @@ body {
     background: #FFFFFF;
 }
 
-#secondHeader img {
-    position: absolute;
-    width: 261px;
-    height: 160px;
-    left: 50px;
-}
+    #secondHeader img {
+        position: absolute;
+        width: 261px;
+        height: 160px;
+        left: 50px;
+    }
 
-#secondHeader h1 {
-    position: absolute;
-    width: 100%;
-    height: 87px;
-    top: -15px;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 75px;
-    text-align: center;
-    color: #CF509C;
-}
+    #secondHeader h1 {
+        position: absolute;
+        width: 100%;
+        height: 87px;
+        top: -15px;
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 64px;
+        line-height: 75px;
+        text-align: center;
+        color: #CF509C;
+    }
 
-#secondHeader h4 {
-    position: absolute;
-    width: 100%;
-    height: 91px;
-    left: 0;
-    top: 60px;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-}
+    #secondHeader h4 {
+        position: absolute;
+        width: 100%;
+        height: 91px;
+        left: 0;
+        top: 60px;
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 36px;
+        line-height: 42px;
+        text-align: center;
+    }
 
 main {
     padding-top: 340px;
@@ -95,21 +95,21 @@ main {
     padding: 10px;
 }
 
-#form input {
-    box-sizing: border-box;
-    width: 100%;
-    height: 54px;
-    background: rgba(255, 255, 255, 0.57);
-    border-radius: 10px;
-    padding: 5px;
-    margin-bottom: 20px;
-    border: none;
-    font-family: 'Alegreya Sans SC';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 34px;
-}
+    #form input {
+        box-sizing: border-box;
+        width: 100%;
+        height: 54px;
+        background: rgba(255, 255, 255, 0.57);
+        border-radius: 10px;
+        padding: 5px;
+        margin-bottom: 20px;
+        border: none;
+        font-family: 'Alegreya Sans SC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 34px;
+    }
 
 #botao {
     width: 306px;
@@ -135,32 +135,97 @@ main {
     width: 200px;
 }
 
-#tableMed th,
-#tableMed td {
-    padding: 10px;
-    text-align: end;
-    border: 2px solid black;
-    font-family: 'Alegreya Sans SC';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 34px;
-}
+    #tableMed th,
+    #tableMed td {
+        padding: 10px;
+        text-align: end;
+        border: 2px solid black;
+        font-family: 'Alegreya Sans SC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 34px;
+    }
 
-#tableMed th {
-    background: #767373;
-    color: white;
-}
+    #tableMed th {
+        background: #767373;
+        color: white;
+    }
 
-tr {
-    text-align: end;
-    font-family: 'Alegreya Sans SC';
-    background: #beb9b9;
-    color: black;
-    border: 4px solid black;
-    min-width: 80px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 34px;
+    tr {
+        text-align: end;
+        font-family: 'Alegreya Sans SC';
+        background: #beb9b9;
+        color: black;
+        border: 4px solid black;
+        min-width: 80px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 34px;
+    }
+
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    #firstHeader {
+        height: 350px;
+    }
+    
+    #firstHeader ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        margin-left: -20px;
+    }
+
+    #secondHeader {
+        margin-top: 200px;
+    }
+
+        #secondHeader img {
+            width: 130px;
+            height: 80px;
+            margin-left: -20px;
+        }
+
+        #secondHeader h1 {
+            width: 200px;
+            font-size: 20px;
+            line-height: 48px;
+            margin-left: 100px;
+        }
+
+        #secondHeader h4 {
+            font-size: 24px;
+            line-height: 28px;
+        }
+
+    #form {
+        margin-top: 150px;
+        width: 100%;
+        margin-left: 0;
+    }
+
+    table {
+        width: 100%;
+    }
+
+        #tableMed {
+            margin-left: 0;
+            margin-top: 20px;
+            width: 100%;
+            font-size: 14px;
+        }
+
+        #tableMed th,
+        #tableMed td {
+            padding: 0px;
+            font-size: 10px;
+        }
+
+    main {
+        padding-bottom: 20px; 
+    }
 }
